--- a/es/doc/rules/modernize.tex
+++ b/es/doc/rules/modernize.tex
@@ -86,6 +86,8 @@ Se preferirá la definición de alias de tipos con \cppkey{using} frente
 
 \subsubsection{Reglas excluidas}
 
+No son de aplicación las siguientes reglas.
+
 \begin{itemize}
 
 \item \cppid{modernize-use-designated-initializers}.
