Review of misc rules

--- a/en/doc/rules/misc.tex
+++ b/en/doc/rules/misc.tex
@@ -3,7 +3,11 @@
 All these rules are under category
 \cppid{misc}.
 
-Below, main applicable rules are described.
+\subsubsection{Applicable Rules}
+
+The main applicable rules are summarized below. Please note that there are many more
+rules in this category that are enabled. If you need a detailed explanation of any of them,
+you can consult the \textemph{clang-tidy} manual.
 
 \begin{itemize}
 
@@ -15,17 +19,16 @@ All variables that are initialized and not modified shall be defined as
 \cppkey{const}.
 
 \item \cppid{misc-definitions-in-headers}:
-No variable shall be defined in a header file.
+Variables will not be defined in header files unless they are qualified
+with \cppkey{extern} or \cppkey{inline}.
+Functions will not be defined in header files unless they are qualified
+with \cppkey{inline}.
 
 \item \cppid{misc-header-include-cycle}:
 Cyclic dependencies among header files shall be avoided.
 
 \item \cppid{misc-include-cleaner}:
 Inclusion of not needed header files shall be avoided.
-
-\item \cppid{misc-non-private-member-variables-in-classes}:
-Data members shall be private unless the type is a structure with
-all data members being public.
 
 \item \cppid{misc-redundant-expression}:
 Redundant expressions shall be avoided.
@@ -35,5 +38,21 @@ When possible, \cppkey{static\_assert} shall be preferred over \cppid{assert}.
 
 \item \cppid{misc-throw-by-value-catch-by-reference}:
 Exceptions shall be thrown by value and caught by reference.
+
+\item \cppid{misc-use-anonymous-namespace}:
+Placing a function or a variable in an \textmark{anonymous namespace} will be
+preferred over defining them as \cppkey{static}.
+
+\end{itemize}
+
+\subsubsection{Excluded Rules}
+
+The following rules shall not be applied:
+
+\begin{itemize}
+
+\item \cppid{misc-no-recursion}.
+\item \cppid{misc-non-private-member-variables-in-classes}.
+\item \cppid{misc-use-internal-linkage}.
 
 \end{itemize}
